# mcp-servers

./: README.md
mcp-mysql/: .gitignore  README.md  config.yaml  pyproject.toml
mcp-mysql/mcp_mysql/: __init__.py  config.py  connection.py  server.py
mcp-mysql/mcp_mysql/tools/: __init__.py  list.py  query.py  schema.py
